<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2DFFC107"
        android:gravity="center_horizontal">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#169600"
            android:text="@string/add_product"
            android:gravity="center"
            android:padding="20dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:textSize="25sp"/>

    <EditText
            android:id="@+id/name_product_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_prduct"
            android:gravity="center"
            android:textColorHint="#169600"
            android:padding="20dp"
            android:textColor="#169600"
            android:inputType="textCapWords"
    />
    <EditText
            android:id="@+id/data_product_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/data_prduct"
            android:gravity="center"
            android:textColorHint="#169600"
            android:padding="20dp"
            android:textColor="#169600"
            android:inputType="textCapWords"
    />
    <Button
            android:id="@+id/btn_add_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_product"
            android:background="#27A4FF3B"
    />

</LinearLayout>
