<?xml version="1.0" encoding="utf-8"?>
<!--suppress DeprecatedClassUsageInspection -->
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
    <androidx.cardview.widget.CardView
            android:id="@+id/cardView_product"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="12dp"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.9">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="ExtraText"
                android:orientation="vertical"
                android:background="#72BD9B2A">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="279dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/id_name_product_card"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:textSize="25sp"
                        android:textColor="#FFFFFF"
                        tools:ignore="ObsoleteLayoutParam,RtlHardcoded"
                        android:hint="@string/name_prduct"/>
                <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox_product_card"
                        android:button="@drawable/add_shopping"
                        android:layout_gravity="center"
                        tools:layout_editor_absoluteY="2dp"
                        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="1.0"
                        tools:ignore="MissingConstraints"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/label_count_product"
                        android:text="@string/count_product"
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:visibility="visible"
                        android:textColor="#FFFF"
                        android:paddingEnd="2dp"
                        android:paddingRight="2dp" tools:ignore="RtlSymmetry"/>
                <SeekBar
                        android:id="@+id/id_seekbar_count"
                        android:layout_width="210dp"
                        android:layout_height="match_parent"
                        android:visibility="visible"
                        android:paddingEnd="2dp"
                        android:paddingRight="2dp" tools:ignore="RtlSymmetry"/>
                <TextView
                        android:id="@+id/label_data_product"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:visibility="visible"
                        android:gravity="center"
                        android:text="@string/data_prduct"
                        android:textColor="#ffffff"
                        android:paddingEnd="2dp"
                        android:paddingRight="2dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>